# holybro_avia

./: .gitignore
src/holybro_localization/: CMakeLists.txt  README.md  package.xml
src/holybro_localization/launch/: holybro_localization.launch.py  holybro_localization_main.launch.py  holybro_localization_odom.launch.py  holybro_localization_rosbag.launch.py
src/holybro_localization/rviz/: default.rviz
src/holybro_localization/src/: vehicle_odometry_to_tf.cpp
src/holybro_model/: .gitignore  CMakeLists.txt  README.md  frames_2024-11-19_23.18.58.gv  package.xml
src/holybro_model/launch/: holybro_model.launch.py  holybro_model_rosbag.launch.py
src/holybro_model/meshes/: 1345_prop_ccw_center.dae  1345_prop_ccw_center.stl
src/holybro_model/rviz/: default.rviz
src/holybro_model/urdf/: model.urdf  model_diff.urdf  model_lidar.urdf
src/holybro_model/xacro/: model.xacro
src/holybro_prep/: .gitignore  CMakeLists.txt  README.md  package.xml
src/holybro_prep/launch/: holybro_play.launch.py  holybro_prep.launch.py  holybro_rosbag.launch copy.py
src/holybro_prep/rviz/: default.rviz  default_bag.rviz
src/livox_ros2_avia/: .gitignore
src/livox_ros2_avia/livox_ros2_avia/config/: livox_hub_config.json  livox_lidar_config.json
src/livox_ros2_avia/livox_ros2_avia/launch/: livox_lidar_launch.py
src/px4_remap/: .gitignore  CMakeLists.txt
src/px4_remap/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/px4_remap/install/px4_remap/lib/px4_remap/: gps_remap  imu_remap  lidar_remap  odometry_remap
src/px4_remap/install/px4_remap/share/px4_remap/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/px4_remap/launch/: remap.launch.py  remap_imu.launch.py  remap_launch.xml
src/px4_remap/log/: latest_build
src/px4_remap/src/: gps_remap.cpp  imu_remap.cpp  lidar_remap.cpp  odometry_remap.cpp
